# thermalbits

./: .gitignore  LICENSE  README.md  REPO_CONTEXT.md  fast_start.sh  generate_overviews.py  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv  run_tests.py
documentation/: README.md  mkdocs.yml
documentation/docs/: getting-started.md  index.md
mplconfig/: fontlist-v390.json
test_files/: half_adder.v  simple.v
test_files/EDGE/: C6288.json  apex2.json  b3.json  b4.json  bc0.json  bca.json  bcb.json  bcc.json  bcd.json  chkn.json  cps.json  duke2.json  exep.json  in3.json  in4.json  in5.json  in6.json  jbp.json  mainpla.json  mark1.json  seq.json  signet.json  sin.json  t1.json  term1.json  too_large.json  x6dn.json  xparc.json
test_files/EPFL/: cavlc.json  ctrl.json  dec.json  int2float.json  sin.v
testes_halfadder/: half_adder_depth.json  half_adder_energy.json  half_adder_original.json
testes_halfadder/mplconfig/: fontlist-v390.json
tests/: conftest.py  test_apply_methods.py  test_half_adder_apply_visual_entropy.py  test_overview_schema.py
thermalbits/: __init__.py  _init_method.py  apply_methods.py  copy_methods.py  generate_overview.py  overview_to_verilog.py  thermalbits.py  update_entropy.py  verilog_utils.py  visualize_dag.py
thermalbits/eo_do_rs/: Cargo.toml
thermalbits/iron_circuit_sim/: Cargo.toml  README.md
thermalbits/iron_circuit_sim/scripts/: run_parallel_chunks.py
thermalbits/iron_circuit_sim/src/: app.rs  circuit.rs  cli.rs  lib.rs  main.rs  stats.rs
thermalbits/iron_circuit_sim/src/io/: mod.rs  partial_bin.rs  report.rs
thermalbits/iron_circuit_sim/src/sim/: chunk.rs  full.rs  mod.rs  shared.rs
(+13 files in other folders)
